added home app and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>Boutique Ado {% block extra_title %}{% endblock %}</title>
+    <title>ecomm{% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top"></header>
@@ -50,3 +50,7 @@
     
   </body>
 </html>
+
+ 
+
+  
